Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12681

Some local file descriptors not released when using remote spilling

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.0.0, Impala 4.1.0, Impala 4.2.0, Impala 4.3.0
    • Impala 4.4.0
    • Backend
    • None

    Description

      The bug occurs during remote spilling when writing spilled data to local buffers. In this process, if the files are not completely filled, such as when no more data is incoming at the end of spilling, there is a possibility of partial writes to the files, the files might be physically removed without properly releasing the associated file descriptor. This issue can be observed in cases like the one described below.

      find /proc/*/fd -ls | grep '(deleted)'
      288574785 0 lrwx------ 1 impala impala 64 Jan 3 14:24 /proc/x/fd/xxxx -> /opt/impala/scratch/impala-scratch/impala-scratch-xxxxxxxxx-xxxx-xxxx\ (deleted) 

      In such a scenario, the disk space occupied by the file may not be reclaimed because the file descriptor still maintains a reference to the file.

      Attachments

        Activity

          People

            baggio000 Yida Wu
            baggio000 Yida Wu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: